Fixed input on safari browsers

--- a/components/02-elements/form/input/_input.scss
+++ b/components/02-elements/form/input/_input.scss
@@ -30,7 +30,7 @@ $input__date-background-position     : center center !default;
     &__field {
         width: 100%;
         height: $input__field-spacing;
-        line-height: $input__field-spacing;
+        line-height: normal;
         padding: $input__field-padding;
         border: $input__field-border;
         border-radius: $input__field-border-radius;
